--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           <li class="nav-item">
             <a class="nav-link" href="skills.html">SKILLS</a>
           </li>
-          <li class="nav-item">
+<!--           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">PROJECTS</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="history.html">EXPERIENCE</a>
           </li>
@@ -52,7 +52,7 @@
     <div class="first-container container-fluid">
       <div class="title">
         <h1>I'm Marc</h1>
-        <h2 class="title-sub">a macOS Engineer and Full Stack Developer</h2>
+        <h2 class="title-sub">a macOS Engineer and learner of Web Development</h2>
       </div>
       <img class="title-img" src="assets/images/title-image.png" alt="code-img" />
     </div>
