--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
           <li class="nav-item">
             <a class="nav-link" href="skills.html">SKILLS</a>
           </li>
-          <li class="nav-item">
+<!--           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">PROJECTS</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="history.html">EXPERIENCE</a>
           </li>
