--- a/skills.html
+++ b/skills.html
@@ -35,9 +35,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="skills.html">SKILLS</a>
           </li>
-          <li class="nav-item">
+<!--           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">PROJECTS</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="history.html">EXPERIENCE</a>
           </li>
@@ -213,7 +213,7 @@
           <a href="assets/cv.pdf" target="_blank" class="cv-pdf"><i class="fa fa-download"></i><span class="sr-only">Download link.</span></a>
         </div>
         <div class="col-md-4 col-sm-4 copyright-wrapper">
-          <p class="copyright">© 2020 Marc Chapman</p>
+          <p class="copyright">© 2021 Marc Chapman</p>
         </div>
         <div class="col-md-4 col-sm-4 social-wrapper">
           <h5 class="h5-sub">Social Links</h5>
