Added missing closing tags

--- a/history.html
+++ b/history.html
@@ -132,6 +132,10 @@
               <p>&bull; Arranging hardware repairs with companies AASP.</p>
             </div>
           </li>
+           </ul>
+      </div>
+    </div>
+  </div>
 
     <!-- Footer -->
     <footer class="footer-link container-fluid">
